清理掉一些已经没价值的提示信息

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -673,13 +673,13 @@ Body:
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在连接到角色数据库服务器....\n"
 - Original: "Connect success! (Char Server Connection)\n"
-  Translation: "连接成功! (WEB 接口服务器已建立与角色数据库服务器之间的连接)\n"
+  Translation: "连接成功! (已建立与角色数据库服务器之间的连接)\n"
 - Original: "Connect success! (Login Server Connection)\n"
-  Translation: "连接成功! (WEB 接口服务器已建立与登录数据库服务器之间的连接)\n"
+  Translation: "连接成功! (已建立与登录数据库服务器之间的连接)\n"
 - Original: "Connect success! (Map Server Connection)\n"
-  Translation: "连接成功! (地图服务器已建立与数据库之间的连接)\n"
+  Translation: "连接成功! (已建立与主数据库之间的连接)\n"
 - Original: "Connect success! (Web Server Connection)\n"
-  Translation: "连接成功! (WEB 接口服务器已建立与数据库服务器之间的连接)\n"
+  Translation: "连接成功! (已建立与 WEB 接口数据库服务器之间的连接)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已连接到登录服务器 (连接编号为 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
@@ -689,7 +689,7 @@ Body:
 - Original: "Connecting to the Login DB server.....\n"
   Translation: "正在连接到登录数据库服务器....\n"
 - Original: "Connecting to the Map DB Server....\n"
-  Translation: "正在连接到地图数据库服务器....\n"
+  Translation: "正在连接到主数据库服务器....\n"
 - Original: "Connecting to the Web DB server.....\n"
   Translation: "正在连接到 WEB 接口数据库服务器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
@@ -822,7 +822,7 @@ Body:
   Translation: "当玩家在无效的地图登录时, 会被送到: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
 - Original: "Defaulting to %s as our IP address\n"
   Translation: "使用 %s 作为我们默认的 IP 地址\n"
-- Original: "Delay delayfix = %d\n"
+- Original: "Delay delayfix = %f\n"
   Translation: ""
 - Original: "Deleting channel %s alias %s type %d\n"
   Translation: ""
@@ -834,10 +834,6 @@ Body:
   Translation: "已经从 import-tmpl 目录中复制了 %s 文件.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探测到 [{CL_WHITE}]'%s'[{CL_RESET}] 连接所指向的目标数据库当前的字符集为 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-- Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
-  Translation: "诊断信息: 语言信息: %s | 位置编码: %s\n"
-- Original: "Diagnostic information: System Codepage = %d | UILanguage = 0x%04X | Console Codepage = %d\n"
-  Translation: "诊断信息: 系统内置页码 = %d | 交互语言 = 0x%04X | 终端输出页码 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -2311,7 +2307,7 @@ Body:
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
   Translation: "正在连接日志数据库 [{CL_WHITE}]'%s'[{CL_RESET}] 位于 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "[{CL_GREEN}]已成功连接[{CL_RESET}] 到日志数据库 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: "已成功连接到日志数据库 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:[{CL_CLL}]"
   Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:[{CL_CLL}]"
 - Original: "\\*"
@@ -2685,6 +2681,8 @@ Body:
 - Original: "buildin_emotion: Unknown emotion %d (min=%d, max=%d).\n"
   Translation: ""
 - Original: "buildin_emotion: Unknown game ID supplied %d.\n"
+  Translation: ""
+- Original: "buildin_enablenpc: Undefined command \"%s\".\n"
   Translation: ""
 - Original: "buildin_equip: Item %u cannot be equipped\n"
   Translation: ""
@@ -5253,6 +5251,8 @@ Body:
 - Original: "status_set_viewdata (MERCENARY): No view data for class %d\n"
   Translation: ""
 - Original: "status_set_viewdata (MOB): No view data for class %d\n"
+  Translation: ""
+- Original: "status_set_viewdata (NPC): Invalid view data %d\n"
   Translation: ""
 - Original: "status_set_viewdata (PC): No view data for class %d\n"
   Translation: ""
