--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -673,13 +673,13 @@ Body:
 - Original: "Connect Character DB server.... (Character Server)\n"
   Translation: "正在連線到角色資料庫伺服器....\n"
 - Original: "Connect success! (Char Server Connection)\n"
-  Translation: "連線成功! (WEB 介面伺服器已建立與角色資料庫伺服器之間的連線)\n"
+  Translation: "連線成功! (已建立與角色資料庫伺服器之間的連線)\n"
 - Original: "Connect success! (Login Server Connection)\n"
-  Translation: "連線成功! (WEB 介面伺服器已建立與登入資料庫伺服器之間的連線)\n"
+  Translation: "連線成功! (已建立與登入資料庫伺服器之間的連線)\n"
 - Original: "Connect success! (Map Server Connection)\n"
-  Translation: "連線成功! (地圖伺服器已建立與資料庫之間的連線)\n"
+  Translation: "連線成功! (已建立與主資料庫之間的連線)\n"
 - Original: "Connect success! (Web Server Connection)\n"
-  Translation: "連線成功! (WEB 介面伺服器已建立與資料庫伺服器之間的連線)\n"
+  Translation: "連線成功! (已建立與 WEB 介面資料庫伺服器之間的連線)\n"
 - Original: "Connected to login-server (connection #%d).\n"
   Translation: "已連線到登入伺服器 (連線編號為 #%d).\n"
 - Original: "Connecting to %d.%d.%d.%d:%i\n"
@@ -689,7 +689,7 @@ Body:
 - Original: "Connecting to the Login DB server.....\n"
   Translation: "正在連線到登入資料庫伺服器....\n"
 - Original: "Connecting to the Map DB Server....\n"
-  Translation: "正在連線到地圖資料庫伺服器....\n"
+  Translation: "正在連線到主資料庫伺服器....\n"
 - Original: "Connecting to the Web DB server.....\n"
   Translation: "正在連線到 WEB 介面資料庫伺服器....\n"
 - Original: "Connection Closed. No map server available that has a major city, and unable to find map-server for '%s'.\n"
@@ -822,7 +822,7 @@ Body:
   Translation: "當玩家在無效的地圖登入時, 會被送到: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
 - Original: "Defaulting to %s as our IP address\n"
   Translation: "使用 %s 作為我們預設的 IP 地址\n"
-- Original: "Delay delayfix = %d\n"
+- Original: "Delay delayfix = %f\n"
   Translation: ""
 - Original: "Deleting channel %s alias %s type %d\n"
   Translation: ""
@@ -834,10 +834,6 @@ Body:
   Translation: "已經從 import-tmpl 目錄中複製了 %s 檔案.\n"
 - Original: "Detected the [{CL_WHITE}]%s[{CL_RESET}] database character set is [{CL_WHITE}]%s[{CL_RESET}].\n"
   Translation: "探測到 [{CL_WHITE}]'%s'[{CL_RESET}] 連線所指向的目標資料庫當前的字符集為 [{CL_WHITE}]'%s'[{CL_RESET}].\n"
-- Original: "Diagnostic information: Langinfo: %s | Locale: %s\n"
-  Translation: "診斷資訊: 語言資訊: %s | 位置編碼: %s\n"
-- Original: "Diagnostic information: System Codepage = %d | UILanguage = 0x%04X | Console Codepage = %d\n"
-  Translation: "診斷資訊: 系統內建頁碼 = %d | 互動語言 = 0x%04X | 終端輸出頁碼 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -2311,7 +2307,7 @@ Body:
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Connecting to the Log Database [{CL_WHITE}]%s[{CL_RESET}] At [{CL_WHITE}]%s[{CL_RESET}]...\n"
   Translation: "正在連線日誌資料庫 [{CL_WHITE}]'%s'[{CL_RESET}] 位於 [{CL_WHITE}]%s[{CL_RESET}]...\n"
 - Original: "[{CL_WHITE}][SQL][{CL_RESET}]: Successfully '[{CL_GREEN}]connected[{CL_RESET}]' to Database '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "[{CL_GREEN}]已成功連線[{CL_RESET}] 到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: "已成功連線到日誌資料庫 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "[{CL_YELLOW}][Warning][{CL_RESET}]:[{CL_CLL}]"
   Translation: "[{CL_YELLOW}][警告][{CL_RESET}]:[{CL_CLL}]"
 - Original: "\\*"
@@ -2685,6 +2681,8 @@ Body:
 - Original: "buildin_emotion: Unknown emotion %d (min=%d, max=%d).\n"
   Translation: ""
 - Original: "buildin_emotion: Unknown game ID supplied %d.\n"
+  Translation: ""
+- Original: "buildin_enablenpc: Undefined command \"%s\".\n"
   Translation: ""
 - Original: "buildin_equip: Item %u cannot be equipped\n"
   Translation: ""
@@ -5253,6 +5251,8 @@ Body:
 - Original: "status_set_viewdata (MERCENARY): No view data for class %d\n"
   Translation: ""
 - Original: "status_set_viewdata (MOB): No view data for class %d\n"
+  Translation: ""
+- Original: "status_set_viewdata (NPC): Invalid view data %d\n"
   Translation: ""
 - Original: "status_set_viewdata (PC): No view data for class %d\n"
   Translation: ""
