改进开启 print_req_res 后打印信息的呈现方式, 使信息的区域划分更清晰

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -332,6 +332,8 @@ Body:
   Translation: ""
 - Original: "%s: Unit with ID '%d' is not found.\n"
   Translation: ""
+- Original: "%s: Unsupport charset: %s, defaulting to CP_ACP\n"
+  Translation: ""
 - Original: "%s: Unsupport default ANSI codepage: %d, defaulting to latin1\n"
   Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
@@ -398,6 +400,10 @@ Body:
   Translation: ""
 - Original: "--- 00-01-02-03-04-05-06-07-08-09-0A-0B-0C-0D-0E-0F   0123456789ABCDEF\n"
   Translation: ""
+- Original: "--- Request Information Begin ---------------------------------------\n"
+  Translation: "--- 請求詳情 - 開始 -------------------------------------------------\n"
+- Original: "--- Request Information End -----------------------------------------\n"
+  Translation: "--- 請求詳情 - 結束 -------------------------------------------------\n"
 - Original: "--- end nullpo info ----------------------------------------\n"
   Translation: ""
 - Original: "--- nullpo info --------------------------------------------\n"
@@ -487,7 +493,7 @@ Body:
 - Original: "Blacksmith Blessing amount %hu too high, capping to MAX_AMOUNT.\n"
   Translation: ""
 - Original: "Body is:\n%s\n"
-  Translation: ""
+  Translation: "出站響應內容 (Response Body):\n%s\n"
 - Original: "Bonus Script loaded for CID=%d. Total: %d.\n"
   Translation: "已載入角色編號為: %d 的 %d 個效果指令碼 (Bonus Script).\n"
 - Original: "Bonus Script saved for CID=%d. Total: %d.\n"
@@ -1097,9 +1103,9 @@ Body:
 - Original: "In function _vShowMessage() -> Invalid flag passed.\n"
   Translation: ""
 - Original: "Incoming Headers are:\n"
-  Translation: ""
+  Translation: "進站請求標頭 (Request Headers):\n"
 - Original: "Incoming Pages are:\n"
-  Translation: ""
+  Translation: "進站請求引數 (Request Params):\n"
 - Original: "Incorrect TimeLimit format %s given, skipping.\n"
   Translation: ""
 - Original: "Incorrect use of 'close' command!\n"
@@ -1631,7 +1637,7 @@ Body:
 - Original: "Options:\n"
   Translation: ""
 - Original: "Outgoing Headers are:\n"
-  Translation: ""
+  Translation: "出站響應標頭 (Response Headers):\n"
 - Original: "Over 65k instances of '%s' script are being run!\n"
   Translation: ""
 - Original: "PC %d skill castend skill =%d map=%s\n"
@@ -1771,7 +1777,7 @@ Body:
 - Original: "Requires Weapon %s is invalid.\n"
   Translation: "依賴的武器(Weapon) %s 無效.\n"
 - Original: "Response status is: %d\n"
-  Translation: ""
+  Translation: "出站響應程式碼 (Response Status): %d\n"
 - Original: "RetaliateRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Retrieved '[{CL_WHITE}]%d[{CL_RESET}]' (failed: %d) guild bound item(s) for Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
