--- a/conf/web_athena.conf
+++ b/conf/web_athena.conf
@@ -17,6 +17,32 @@
 // 此端口会开放给游戏客户端用于建立 HTTP 请求
 web_port: 3000
 
+// 当自动转码不适用时, 将 UTF8 数据以什么样的编码进行保存?
+// 
+// 客户端与 WEB 接口服务器进行通讯的时候将会使用 UTF8 编码进行通讯,
+// WEB 接口服务器内部会尝试将客户端发送来的信息转码成与数据库连接一致的编码.
+// 
+// 例如: 当您的 WEB 接口数据库的连接编码是 big5/gbk/utf8/utf8mb4 的时候,
+// 程序将会自动把客户端发来的 UTF8 内容转换成 big5/gbk/utf8 编码然后存储到数据库中.
+// 
+// 但若您的 WEB 接口数据库连接编码是 latin1 的话, 那么程序无法进行编码转换工作,
+// 因为将 UTF8 编码的信息转码成 latin1 之后将会导致信息丢失.
+// 
+// 您可以在这里指定如果碰到此类情况时, 
+// 程序应该将 UTF8 内容转换成什么编码并存放到 latin1 编码的数据表中.
+// 
+// 注意: 这样的操作并不会导致数据丢失, 但可能会导致你的数据库管理软件 (例如: Navicat)
+// 无法正确理解 latin1 表中存放的数据的真正编码, 这回导致通过管理软件查看数据的时候看到的中文是乱码.
+// 通常可以修改管理软件的连接默认编码来解决问题.
+//
+// 但如果可以的话, 依然推荐您简体中文的服使用 gbk 编码建立数据库,
+// 繁体中文的服使用 big5 编码建立数据库. 这样将会获得最大程度的自动转码支持.
+//
+// 提醒: 在正式开服之前一旦确定该选项的值, 那么请不要再进行更改.
+// 除非您准备重新清空数据一切重新再来, 否则在已经产生历史数据后再改动此选项
+// 会导致程序将无法再将之前保存的数据正确的转换成 UTF8 编码.
+character_codepage: utf8
+
 // 往控制台窗口中显示内容时, 在每行信息的前面加上时间戳. 
 // 最终组成的时间最大长度不能超过 20 个字符.
 //  
