--- a/src/web/web-server.vcxproj.filters
+++ b/src/web/web-server.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="web.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="merchantstore_controller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="auth.hpp">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="merchantstore_controller.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
