--- a/src/web/web-server.vcxproj
+++ b/src/web/web-server.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="charconfig_controller.cpp" />
     <ClCompile Include="emblem_controller.cpp" />
     <ClCompile Include="merchantstore_controller.cpp" />
+    <ClCompile Include="recruitment_controller.cpp" />
     <ClCompile Include="sqllock.cpp" />
     <ClCompile Include="userconfig_controller.cpp" />
     <ClCompile Include="web.cpp" />
@@ -193,6 +194,7 @@
     <ClInclude Include="emblem_controller.hpp" />
     <ClInclude Include="http.hpp" />
     <ClInclude Include="merchantstore_controller.hpp" />
+    <ClInclude Include="recruitment_controller.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="sqllock.hpp" />
     <ClInclude Include="userconfig_controller.hpp" />
