对调用接口的账号编号和角色编号的一致性进行校验

--- a/src/web/web-server.vcxproj.filters
+++ b/src/web/web-server.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="recruitment_controller.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="http.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="auth.hpp">
