--- a/src/web/web-server.vcxproj.filters
+++ b/src/web/web-server.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="merchantstore_controller.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="recruitment_controller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="http.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="auth.hpp">
@@ -66,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="merchantstore_controller.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="recruitment_controller.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
