汇入最新代码, 完善文档, 修正实现细节

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -797,25 +797,25 @@ Body:
 - Original: "DamageFlags %s is invalid.\n"
   Translation: ""
 - Original: "Data: %s\n"
-  Translation: ""
+  Translation: "数据: %s\n"
 - Original: "Data: constant name='%s' value=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "数据: 常量名称='%s' 常量值=%[{PRId64}]\n"
 - Original: "Data: label pos=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "数据: 标签位置=%[{PRId64}]\n"
 - Original: "Data: nothing (nil)\n"
-  Translation: ""
+  Translation: "数据: 什么都没有 (nil)\n"
 - Original: "Data: number value=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "数据: 数值=%[{PRId64}]\n"
 - Original: "Data: param name='%s' type=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "数据: 参数名称='%s' 类型=%[{PRId64}]\n"
 - Original: "Data: reference name='%s' type=%s\n"
-  Translation: ""
+  Translation: "数据: 引用名称='%s' 类型=%s\n"
 - Original: "Data: string value=\"%s\"\n"
-  Translation: ""
+  Translation: "数据: 字符串值=\"%s\"\n"
 - Original: "Data: string value=NULL\n"
-  Translation: ""
+  Translation: "数据: 字符串值=NULL\n"
 - Original: "Data: variable name='%s' index=%d\n"
-  Translation: ""
+  Translation: "数据: 变量名称='%s' 索引=%d\n"
 - Original: "Database type mismatch: %s != %s.\n"
   Translation: ""
 - Original: "Database version %hu is not supported anymore. Minimum version is: %hu\n"
@@ -1017,11 +1017,11 @@ Body:
 - Original: "Fullness %hu exceeds maximum of 100. Capping...\n"
   Translation: ""
 - Original: "Function: %s\n"
-  Translation: ""
+  Translation: "函数名称: %s\n"
 - Original: "Function: %s (%d parameter%s):\n"
-  Translation: ""
+  Translation: "函数名称: %s (有 %d 个参数%.0s):\n"
 - Original: "Function: %s (no parameters)\n"
-  Translation: ""
+  Translation: "函数名称: %s (没有参数)\n"
 - Original: "GRF %s read error\n"
   Translation: ""
 - Original: "GRF data file found: '%s'\n"
@@ -1893,11 +1893,11 @@ Body:
 - Original: "Small Size Fix %d for %s is out of bounds, defaulting to 100.\n"
   Translation: ""
 - Original: "Source (NPC): %s (invisible/not on a map)\n"
-  Translation: "来源 (NPC): %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
+  Translation: "来源 (NPC 单位): %s (它是不可见单位 / 它不存在于任何地图上)\n"
 - Original: "Source (NPC): %s at %s (%d,%d)\n"
-  Translation: "来源 (NPC): %s 位于 %s (%d,%d)\n"
+  Translation: "来源 (NPC 单位): %s 位于 %s (%d,%d)\n"
 - Original: "Source (NPC): %s is located in: %s\n"
-  Translation: ""
+  Translation: "来源 (NPC 单位): %s 位于 %s\n"
 - Original: "Source (Non-NPC type %d): name %s (invisible/not on a map)\n"
   Translation: "来源 (其他非 NPC 单位, 单位类型: %d): 单位名称: %s (它是不可见的单位 / 它不存在于任何一张地图上)\n"
 - Original: "Source (Non-NPC type %d): name %s at %s (%d,%d)\n"
@@ -2041,15 +2041,15 @@ Body:
 - Original: "Unable to restore stack! Double continuation!\n"
   Translation: ""
 - Original: "Unexpected type for argument %d. Expected label, got %s\n"
-  Translation: ""
+  Translation: "第 %d 个参数的类型不符合预期. 期望是标签 (Label) 但是却拿到了 %s\n"
 - Original: "Unexpected type for argument %d. Expected number.\n"
-  Translation: ""
+  Translation: "第 %d 个参数的类型不符合预期. 期望是数值类型 (Number).\n"
 - Original: "Unexpected type for argument %d. Expected string, number or variable.\n"
-  Translation: ""
+  Translation: "第 %d 个参数的类型不符合预期. 期望是字符串, 数值或变量中的任意一种类型.\n"
 - Original: "Unexpected type for argument %d. Expected string.\n"
-  Translation: ""
+  Translation: "第 %d 个参数的类型不符合预期. 期望是字符串类型 (String).\n"
 - Original: "Unexpected type for argument %d. Expected variable, got %s.\n"
-  Translation: ""
+  Translation: "第 %d 个参数的类型不符合预期. 期望是变量类型 (Variable) 是却拿到了 %s\n"
 - Original: "Unit Id %s is invalid.\n"
   Translation: ""
 - Original: "Unit Target %s is invalid.\n"
