--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -797,25 +797,25 @@ Body:
 - Original: "DamageFlags %s is invalid.\n"
   Translation: ""
 - Original: "Data: %s\n"
-  Translation: ""
+  Translation: "資料: %s\n"
 - Original: "Data: constant name='%s' value=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "資料: 常量名稱='%s' 常量值=%[{PRId64}]\n"
 - Original: "Data: label pos=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "資料: 標籤位置=%[{PRId64}]\n"
 - Original: "Data: nothing (nil)\n"
-  Translation: ""
+  Translation: "資料: 什麼都沒有 (nil)\n"
 - Original: "Data: number value=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "資料: 數值=%[{PRId64}]\n"
 - Original: "Data: param name='%s' type=%[{PRId64}]\n"
-  Translation: ""
+  Translation: "資料: 引數名稱='%s' 型別=%[{PRId64}]\n"
 - Original: "Data: reference name='%s' type=%s\n"
-  Translation: ""
+  Translation: "資料: 引用名稱='%s' 型別=%s\n"
 - Original: "Data: string value=\"%s\"\n"
-  Translation: ""
+  Translation: "資料: 字串值=\"%s\"\n"
 - Original: "Data: string value=NULL\n"
-  Translation: ""
+  Translation: "資料: 字串值=NULL\n"
 - Original: "Data: variable name='%s' index=%d\n"
-  Translation: ""
+  Translation: "資料: 變數名稱='%s' 索引=%d\n"
 - Original: "Database type mismatch: %s != %s.\n"
   Translation: ""
 - Original: "Database version %hu is not supported anymore. Minimum version is: %hu\n"
@@ -1017,11 +1017,11 @@ Body:
 - Original: "Fullness %hu exceeds maximum of 100. Capping...\n"
   Translation: ""
 - Original: "Function: %s\n"
-  Translation: ""
+  Translation: "函式名稱: %s\n"
 - Original: "Function: %s (%d parameter%s):\n"
-  Translation: ""
+  Translation: "函式名稱: %s (有 %d 個引數%.0s):\n"
 - Original: "Function: %s (no parameters)\n"
-  Translation: ""
+  Translation: "函式名稱: %s (沒有引數)\n"
 - Original: "GRF %s read error\n"
   Translation: ""
 - Original: "GRF data file found: '%s'\n"
@@ -1893,11 +1893,11 @@ Body:
 - Original: "Small Size Fix %d for %s is out of bounds, defaulting to 100.\n"
   Translation: ""
 - Original: "Source (NPC): %s (invisible/not on a map)\n"
-  Translation: "來源 (NPC): %s (它是不可見的單位 / 它不存在於任何一張地圖上)\n"
+  Translation: "來源 (NPC 單位): %s (它是不可見單位 / 它不存在於任何地圖上)\n"
 - Original: "Source (NPC): %s at %s (%d,%d)\n"
-  Translation: "來源 (NPC): %s 位於 %s (%d,%d)\n"
+  Translation: "來源 (NPC 單位): %s 位於 %s (%d,%d)\n"
 - Original: "Source (NPC): %s is located in: %s\n"
-  Translation: ""
+  Translation: "來源 (NPC 單位): %s 位於 %s\n"
 - Original: "Source (Non-NPC type %d): name %s (invisible/not on a map)\n"
   Translation: "來源 (其他非 NPC 單位, 單位型別: %d): 單位名稱: %s (它是不可見的單位 / 它不存在於任何一張地圖上)\n"
 - Original: "Source (Non-NPC type %d): name %s at %s (%d,%d)\n"
@@ -2041,15 +2041,15 @@ Body:
 - Original: "Unable to restore stack! Double continuation!\n"
   Translation: ""
 - Original: "Unexpected type for argument %d. Expected label, got %s\n"
-  Translation: ""
+  Translation: "第 %d 個引數的型別不符合預期. 期望是標籤 (Label) 但是卻拿到了 %s\n"
 - Original: "Unexpected type for argument %d. Expected number.\n"
-  Translation: ""
+  Translation: "第 %d 個引數的型別不符合預期. 期望是數值型別 (Number).\n"
 - Original: "Unexpected type for argument %d. Expected string, number or variable.\n"
-  Translation: ""
+  Translation: "第 %d 個引數的型別不符合預期. 期望是字串, 數值或變數中的任意一種型別.\n"
 - Original: "Unexpected type for argument %d. Expected string.\n"
-  Translation: ""
+  Translation: "第 %d 個引數的型別不符合預期. 期望是字串型別 (String).\n"
 - Original: "Unexpected type for argument %d. Expected variable, got %s.\n"
-  Translation: ""
+  Translation: "第 %d 個引數的型別不符合預期. 期望是變數型別 (Variable) 是卻拿到了 %s\n"
 - Original: "Unit Id %s is invalid.\n"
   Translation: ""
 - Original: "Unit Target %s is invalid.\n"
