完善文档并修正一处小 BUG

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -332,9 +332,11 @@ Body:
   Translation: ""
 - Original: "%s: Unit with ID '%d' is not found.\n"
   Translation: ""
-- Original: "%s: Unsupport charset: %s, defaulting to CP_ACP\n"
-  Translation: ""
 - Original: "%s: Unsupport default ANSI codepage: %d, defaulting to latin1\n"
+  Translation: ""
+- Original: "%s: Unsupport encoding: e_pandas_encoding[%d], defaulting to %s\n"
+  Translation: ""
+- Original: "%s: Unsupport encoding: e_pandas_encoding[%d], defaulting to latin1\n"
   Translation: ""
 - Original: "%s: _Buffer size is only %lu but we need %lu, Could not realloc...\n"
   Translation: ""
@@ -427,6 +429,8 @@ Body:
 - Original: "Additional Map %s is already listed as the EnterMap.\n"
   Translation: ""
 - Original: "Additional Map %s is not a valid map, skipping.\n"
+  Translation: ""
+- Original: "AegisName \"%s\" exceeds maximum of %d characters, capping...\n"
   Translation: ""
 - Original: "Aliases should be a sequence.\n"
   Translation: ""
@@ -848,6 +852,8 @@ Body:
   Translation: ""
 - Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' achievements in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: ""
+- Original: "Done converting/upgrading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
@@ -892,8 +898,6 @@ Body:
   Translation: ""
 - Original: "Drops has no Rate value specified, skipping.\n"
   Translation: ""
-- Original: "Drops list exceeds the maximum of %d, skipping.\n"
-  Translation: ""
 - Original: "Dumping script str hash information to hash_dump.txt\n"
   Translation: ""
 - Original: "Egg item %s does not exist.\n"
@@ -912,6 +916,8 @@ Body:
   Translation: "公會圖示太大了, 當前體積是 %d 位元組而最大隻能接受 %d 位元組.\n"
 - Original: "Emblem is too big, current size is %lu and the max length is %d.\n"
   Translation: "公會圖示太大了, 當前體積是 %lu 位元組而最大隻能接受 %d 位元組.\n"
+- Original: "Emblem version is not match, current version is %d and the version required by the client is %d.\n"
+  Translation: ""
 - Original: "Empty message for id %d.\n"
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
@@ -1009,6 +1015,8 @@ Body:
 - Original: "Found the file \"%s\", which can be converted to sql.\nDo you want to convert it now? (Y/N)\n"
   Translation: "\n[{CL_WHITE}][資訊][{CL_RESET}]: 發現資料檔案 \"%s\" 可以被轉換成 SQL 檔案.\n[{CL_CYAN}][選擇][{CL_RESET}]: 請問是否需要進行轉換? (Y/N)\n"
 - Original: "Found the file \"%s\", which requires an upgrade.\nDo you want to convert it now? (Y/N)\n"
+  Translation: ""
+- Original: "Found the file \"%s\", which requires migration to yml.\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
   Translation: "\n[{CL_WHITE}][資訊][{CL_RESET}]: 發現檔案 \"%s\" 可以被遷移到 yml 格式.\n[{CL_CYAN}][選擇][{CL_RESET}]: 是否需要遷移? (Y/N)\n"
@@ -1140,6 +1148,8 @@ Body:
   Translation: ""
 - Original: "Invalid ammo type %s, defaulting to AMMO_NONE.\n"
   Translation: ""
+- Original: "Invalid armor level %d, defaulting to 0.\n"
+  Translation: ""
 - Original: "Invalid battleground map name %s, skipping.\n"
   Translation: ""
 - Original: "Invalid channel type %s at '%s' line '%d'! Skipping...\n"
@@ -1244,6 +1254,18 @@ Body:
   Translation: "物品 %s 不存在於資料庫中, 已跳過.\n"
 - Original: "Item %s does not exist.\n"
   Translation: ""
+- Original: "Item %s is a weapon, but does not have a weapon level. Consider adding it. Defaulting to 1.\n"
+  Translation: ""
+- Original: "Item %s is a weapon, but has an armor level. Defaulting to 0.\n"
+  Translation: ""
+- Original: "Item %s is an armor, but does not have an armor level. Consider adding it. Defaulting to 1.\n"
+  Translation: ""
+- Original: "Item %s is an armor, but has a weapon level. Defaulting to 0.\n"
+  Translation: ""
+- Original: "Item %s is not a weapon, but has a weapon level. Defaulting to 0.\n"
+  Translation: ""
+- Original: "Item %s is not an armor, but has an armor level. Defaulting to 0.\n"
+  Translation: ""
 - Original: "Item %s is not stackable, capping to 1.\n"
   Translation: ""
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
@@ -1287,6 +1309,10 @@ Body:
 - Original: "Item trade override level %d exceeds 100, capping to 100.\n"
   Translation: ""
 - Original: "Item type is not a weapon, defaulting to 0.\n"
+  Translation: ""
+- Original: "Item type is not an armor, defaulting to 0.\n"
+  Translation: ""
+- Original: "JapaneseName \"%s\" exceeds maximum of %d characters, capping...\n"
   Translation: ""
 - Original: "Job %s does not exist.\n"
   Translation: ""
@@ -1569,6 +1595,8 @@ Body:
 - Original: "NPC file '[{CL_WHITE}]%s[{CL_RESET}]' was reloaded.\n"
   Translation: "已重新載入指令碼檔案 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "NPCEvent '%s' not found! (source: %s)\n"
+  Translation: ""
+- Original: "Name \"%s\" exceeds maximum of %d characters, capping...\n"
   Translation: ""
 - Original: "New Auction %u | time left %[{PRtf}] ms | By %s.\n"
   Translation: ""
@@ -1915,6 +1943,8 @@ Body:
 - Original: "Start checking DB integrity\n"
   Translation: "開始檢查資料庫表格和欄位的完整性.\n"
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
+  Translation: ""
+- Original: "StartEvent \"%s\" exceeds maximum of %d characters, capping...\n"
   Translation: ""
 - Original: "Starting server...\n"
   Translation: "正在啟動伺服器...\n"
@@ -2350,9 +2380,13 @@ Body:
   Translation: ""
 - Original: "add_timer_interval: invalid interval (tick=%[{PRtf}] %p[%s] id=%d data=%[{PRIdPTR}] diff_tick=%d)\n"
   Translation: ""
+- Original: "addmonsterdrop: Invalid rate %d (min 1, max 10000).\n"
+  Translation: ""
 - Original: "addmonsterdrop: Nonexistant item %u requested.\n"
   Translation: ""
 - Original: "addmonsterdrop: bad mob id given %d\n"
+  Translation: ""
+- Original: "addmonsterdrop: bad mob name given %s\n"
   Translation: ""
 - Original: "and then edit your user/password in conf/map_athena.conf (or conf/import/map_conf.txt)\n"
   Translation: "在完成上述的資料庫修改操作後, 請更新 conf/map_athena.conf (或 conf/import/map_conf.txt) 中的賬號/密碼設定.\n"
@@ -2514,6 +2548,10 @@ Body:
   Translation: ""
 - Original: "buildin_achievementupdate: call was too early. Character %s(CID: '%u') was not loaded yet.\n"
   Translation: ""
+- Original: "buildin_addmonsterdrop: Random option group can't be used with this type of item (item Id: %d).\n"
+  Translation: ""
+- Original: "buildin_addmonsterdrop: Unknown random option group %d.\n"
+  Translation: ""
 - Original: "buildin_addtimer: Event timer is full, can't add new event timer. (cid:%d timer:%s)\n"
   Translation: ""
 - Original: "buildin_adopt: Non-existant baby character %d requested.\n"
@@ -2533,9 +2571,9 @@ Body:
 - Original: "buildin_aura: The specified aura id '%d' is invalid.\n"
   Translation: ""
 - Original: "buildin_autobonus3: Invalid skill ID %d passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_autobonus3: 無效的技能編號: %d, 已跳過.\n"
 - Original: "buildin_autobonus3: Invalid skill name %s passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_autobonus3: 無效的技能名稱: %s, 已跳過.\n"
 - Original: "buildin_autoequip: Invalid item '%u'.\n"
   Translation: ""
 - Original: "buildin_autoequip: Item '%u' cannot be equipped.\n"
@@ -2549,9 +2587,9 @@ Body:
 - Original: "buildin_bg_unbook: Could not unreserve battleground with name %s\n"
   Translation: ""
 - Original: "buildin_bonus: Invalid skill ID %d passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_bonus: 無效的技能編號: %d, 已跳過.\n"
 - Original: "buildin_bonus: Invalid skill name %s passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_bonus: 無效的技能名稱: %s, 已跳過.\n"
 - Original: "buildin_bonus: unexpected number of arguments (%d)\n"
   Translation: ""
 - Original: "buildin_bonus_script: Invalid! Script: \"%s\". Duration: %d\n"
@@ -2749,6 +2787,8 @@ Body:
 - Original: "buildin_geteleminfo: Invalid type '%d'.\n"
   Translation: ""
 - Original: "buildin_geteleminfo: Player doesn't have Elemental.\n"
+  Translation: ""
+- Original: "buildin_getequiparmorlv: unsupported equip index %d.\n"
   Translation: ""
 - Original: "buildin_getequipid: Unknown equip index '%d'\n"
   Translation: ""
@@ -2981,9 +3021,9 @@ Body:
 - Original: "buildin_isnpccloaked: non-existing NPC.\n"
   Translation: ""
 - Original: "buildin_itemskill: Invalid skill ID %d passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_itemskill: 無效的技能編號: %d, 已跳過.\n"
 - Original: "buildin_itemskill: Invalid skill name %s passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_itemskill: 無效的技能名稱: %s, 已跳過.\n"
 - Original: "buildin_jobcanentermap: Map '%s' is not found in this server.\n"
   Translation: ""
 - Original: "buildin_logmes: Invalid usage without player or npc.\n"
@@ -3046,6 +3086,10 @@ Body:
   Translation: ""
 - Original: "buildin_menu: Unexpected selection (%d)\n"
   Translation: ""
+- Original: "buildin_mercenary_delete: Tried to delete a non existant mercenary from player '%s' (AID: %u, CID: %u)\n"
+  Translation: ""
+- Original: "buildin_mercenary_delete: invalid type value of %d.\n"
+  Translation: ""
 - Original: "buildin_mercenary_set_calls: Invalid guild '%d'.\n"
   Translation: ""
 - Original: "buildin_mercenary_set_faith: Invalid guild '%d'.\n"
@@ -3055,6 +3099,8 @@ Body:
 - Original: "buildin_mergeitem: Nonexistant item %u requested.\n"
   Translation: ""
 - Original: "buildin_misceffect: unsupported effect id %d\n"
+  Translation: ""
+- Original: "buildin_mob_setidleevent: the target GID was not a monster.\n"
   Translation: ""
 - Original: "buildin_monster: Attempted to spawn non-existing ai %d for monster class %d\n"
   Translation: ""
@@ -3195,6 +3241,14 @@ Body:
 - Original: "buildin_setinventoryinfo: Nonexistant item index.\n"
   Translation: ""
 - Original: "buildin_setinventoryinfo: The type should be in range 3-%d, currently type is: %d.\n"
+  Translation: ""
+- Original: "buildin_setiteminfo: Can not set a weapon level for %d.\n"
+  Translation: ""
+- Original: "buildin_setiteminfo: Can not set an armor level for %d.\n"
+  Translation: ""
+- Original: "buildin_setiteminfo: armor level %d is above maximum %d.\n"
+  Translation: ""
+- Original: "buildin_setiteminfo: weapon level %d is above maximum %d.\n"
   Translation: ""
 - Original: "buildin_setmadogear: Invalid mado gear type %hu, defaulting to robot...\n"
   Translation: ""
@@ -3339,8 +3393,10 @@ Body:
 - Original: "buildin_unitaura: The specified aura id '%d' is invalid.\n"
   Translation: ""
 - Original: "buildin_unitskilluseid: Invalid skill ID %d passed to item bonus. Skipping.\n"
-  Translation: ""
+  Translation: "buildin_unitskilluseid: 無效的技能編號: %d, 已跳過.\n"
 - Original: "buildin_unitskilluseid: Invalid skill name %s passed to item bonus. Skipping.\n"
+  Translation: "buildin_unitskilluseid: 無效的技能名稱: %s, 已跳過.\n"
+- Original: "buildin_unitskilluseid: Msg can only be used for monster.\n"
   Translation: ""
 - Original: "buildin_unitskillusepos: Invalid skill ID %d.\n"
   Translation: ""
@@ -4526,9 +4582,17 @@ Body:
   Translation: ""
 - Original: "pc_bonus2: SP_ADD_ITEMGROUP_HEAL_RATE: Reached max (%d) number of item heal bonuses per character!\n"
   Translation: ""
+- Original: "pc_bonus2: SP_ADD_ITEMGROUP_SPHEAL_RATE: Invalid item group with id %d\n"
+  Translation: ""
+- Original: "pc_bonus2: SP_ADD_ITEMGROUP_SPHEAL_RATE: Reached max (%d) number of item SP heal bonuses per character!\n"
+  Translation: ""
 - Original: "pc_bonus2: SP_ADD_ITEM_HEAL_RATE Invalid item with id %d\n"
   Translation: ""
 - Original: "pc_bonus2: SP_ADD_ITEM_HEAL_RATE: Reached max (%d) number of item heal bonuses per character!\n"
+  Translation: ""
+- Original: "pc_bonus2: SP_ADD_ITEM_SPHEAL_RATE Invalid item with id %d\n"
+  Translation: ""
+- Original: "pc_bonus2: SP_ADD_ITEM_SPHEAL_RATE: Reached max (%d) number of item SP heal bonuses per character!\n"
   Translation: ""
 - Original: "pc_bonus2: SP_ADD_MAGIC_DAMAGE_CLASS: Reached max (%d) number of add class magic dmg bonuses per character!\n"
   Translation: ""
@@ -4537,6 +4601,8 @@ Body:
 - Original: "pc_bonus2: SP_ADD_SKILL_BLOW: Reached max (%d) number of skills per character, bonus skill %d (%d) lost.\n"
   Translation: ""
 - Original: "pc_bonus2: SP_FIXCASTRATE: Reached max (%d) number of skills per character, bonus skill %d (%d%%) lost.\n"
+  Translation: ""
+- Original: "pc_bonus2: SP_PANDAS_ADDSKILLRANGE: Reached max (%d) number of skills per character, bonus skill %d (%d) lost.\n"
   Translation: ""
 - Original: "pc_bonus2: SP_RESEFF: Reached max (%d) number of resistance bonuses per character!\n"
   Translation: ""
@@ -5209,6 +5275,8 @@ Body:
 - Original: "skill_unit_onplace_timer: interval error (unit id %x)\n"
   Translation: ""
 - Original: "skill_unitgrouptickset_search: tickset is full\n"
+  Translation: ""
+- Original: "skill_weaponrefine: The hardcoded refine requirement %d for weapon level %d does not match %d from the refine database.\n"
   Translation: ""
 - Original: "socket_config_read: Invalid ip or ip range '%s'!\n"
   Translation: ""
